# google-nextcloud-sync

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  labeler.yml
.github/workflows/: ci.yml  labeler.yml  pages.yml  release.yml
.kilocode/rules/: 01-project.md
config/: settings.example.json
docs/: 01-phase-01.md  config.md  execution-plan-phase-01.md  setup.md  troubleshooting.md
scripts/: docker-entrypoint.sh
site/: index.html  privacy.html  terms.html
src/g2nc/: __init__.py  __main__.py  cli.py  config.py  locking.py  logging.py  logging_utils.py  models.py  ports.py  state.py  sync_service.py  transform.py
src/g2nc/google/: __init__.py  auth.py  calendar.py  client.py  contacts.py  oauth.py
src/g2nc/mapping/: contacts.py  events.py
src/g2nc/nextcloud/: __init__.py  caldav.py  carddav.py  client.py
src/g2nc/sync/: calendar_sync.py  contacts_sync.py  orchestrator.py
src/g2nc/utils/: hashing.py  http.py  timezones.py
tests/: test_cli.py  test_config.py  test_google_client.py  test_locking.py  test_logging_utils.py  test_nextcloud_client.py  test_oauth.py  test_sync_service.py  test_transform.py
tests/cassettes/: google_discovery.yaml
tests/integration/: test_google_clients.py  test_vcr_google.py
tests/unit/: test_auth.py  test_core.py  test_dav_clients.py  test_http.py  test_logging.py  test_orchestrator.py  test_security.py
